--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^7.3 || ^7.4 || ^8.0",
         "sentry/sentry": "^3.3",
         "sentry/sdk": "^3.1",
         "symfony/psr-http-message-bridge": "^1.0 | ^2.0",
